2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	I forgot the offset :)

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	New treeview look, rounded focus on treeview "small" row
	The one you can find in pidgin for example

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Just for testing

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Reduced "flashy" mistakes to focus drawing in nautilus (treeview)

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Lighter tabs focus

2008-01-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Shadow on prelight button :)

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	No shadow on prelight button (previous revision)

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	Better approach to reliefstyle default state

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_gtk2_rc_parse_int),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):