@@ -1,3 +1,13 @@
+2008-01-26  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_focus):
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_extension):
+	* engines/clearlooks/src/clearlooks_types.h:
+	Implemented focus drawing inside the draw_tab, so I added
+	1px of padding.
+
 2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
